# polleneus

./: .gitignore  CLAUDE.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  gates-nightly.yml
client/: THIRD-PARTY.md  build.gradle.kts  settings.gradle.kts
client/app/: build.gradle.kts
docs/: ANSWER-consolidated-pq-universal-reencryption.md  WAYS-OF-WORKING.md  airtime-budget-table.md  open-problem-pq-rerandomizable-encryption.md  originator-anonymity-limit.md
docs/superpowers/: campaign-p0-p6-closeout.md  phase-v-prep.md  (+1 more)
sim/: .gitignore  README.md  pyproject.toml  run.py
sim/soup_sim/: __init__.py  adversary.py  analytics.py  anonymity.py  blob.py  budget.py  buffer.py  cell_list.py  config.py  engine.py  geometry.py  knee.py  metrics.py  mobility.py  percolation.py  policies.py  report.py  scenario.py  token.py  workload.py
sim/tests/: conftest.py  test_adversary.py  test_anonymity.py  test_blob_buffer.py  test_budget.py  test_cell_list.py  test_config.py  test_engine.py  test_engine_airtime.py  test_engine_anonymity.py  test_engine_fidelity.py  test_geometry.py  test_integration_percolation.py  test_knee.py  test_lint_invariants.py  test_metrics_airtime.py  test_mobility.py  test_offline_first.py  test_origination_cover.py  test_origination_defenses.py  test_p3_adaptive.py  test_p3_clock_expiry.py  test_p4_bridge.py  test_p4_ferrying.py  test_policies.py  test_recon.py  test_recon_scenario.py  test_report.py  test_scenario.py  test_scenario_airtime.py  test_scenario_anonymity.py  test_token.py  test_workload_metrics.py
(+89 files in other folders)
